@@ -1,6 +1,8 @@
 -*-change-log-*-
 
 2.2.0.0 (current development version)
+	* Added `virtual-module` field, to allow modules that are not built
+	  but registered (#4875).
 	* `copyComponent` and `installIncludeFiles` will look for include
 	  headers in the build directory ('dist/build/...' by default)
 	  as well (#4866).
